Hotfix: add mongo url and refactor rtd module

--- a/modules/rtd/client/views/list-rtd.client.view.html
+++ b/modules/rtd/client/views/list-rtd.client.view.html
@@ -1,9 +1,9 @@
 <section>
   <div class="page-header">
-    <h1>Articles</h1>
+    <h1>Rtd</h1>
   </div>
   <div class="list-group">
-    <a ng-repeat="article in vm.articles" ui-sref="articles.view({ articleId: article._id })" class="list-group-item">
+    <a ng-repeat="article in vm.rtd" ui-sref="rtd.view({ articleId: article._id })" class="list-group-item">
       <small class="list-group-item-text">
         Posted on
         <span ng-bind="article.created | date:'mediumDate'"></span>
