--- a/modules/rtd/client/views/admin/list-rtd.client.view.html
+++ b/modules/rtd/client/views/admin/list-rtd.client.view.html
@@ -1,14 +1,14 @@
 ﻿<section>
   <div class="page-header">
     <h1>
-      Articles
-      <a class="btn btn-primary pull-right" data-ui-sref="admin.articles.create">
+      Rtd
+      <a class="btn btn-primary pull-right" data-ui-sref="admin.rtd.create">
         <i class="glyphicon glyphicon-plus"></i>
       </a>
     </h1>
   </div>
   <div class="list-group">
-    <a data-ng-repeat="article in vm.articles" data-ui-sref="admin.articles.edit({articleId: article._id})" class="list-group-item">
+    <a data-ng-repeat="article in vm.rtd" data-ui-sref="admin.rtd.edit({articleId: article._id})" class="list-group-item">
       <small class="list-group-item-text">
         Posted on
         <span data-ng-bind="article.created | date:'mediumDate'"></span>
@@ -20,7 +20,7 @@
       <p class="list-group-item-text" data-ng-bind="article.content"></p>
     </a>
   </div>
-  <div class="alert alert-warning text-center" data-ng-if="articles.$resolved && !articles.length">
-    No articles yet, why don't you <a data-ui-sref="admin.articles.create">create one</a>?
+  <div class="alert alert-warning text-center" data-ng-if="rtd.$resolved && !rtd.length">
+    No rtd yet, why don't you <a data-ui-sref="admin.rtd.create">create one</a>?
   </div>
 </section>
