--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -1,43 +1,33 @@
-.content {
-  margin-top: 50px;
+.background-image {
+  background-image: url('https://hd.unsplash.com/photo-1452798991096-382940996d40');
+  background-position: right center;
+  background-size: cover;
+  height: 100vh;
 }
-.undecorated-link:hover {
-  text-decoration: none;
+
+h1 {
+  padding-top: 70px;
+  color: white;
+  font-size: 50px;
+  text-align: center;
 }
-[ng\:cloak],
-[ng-cloak],
-[x-ng-cloak],
-.ng-cloak,
-.x-ng-cloak {
-  display: none !important;
+
+label {
+  color: white;
+  margin-right: 10px;
+  margin-left: 10px;
 }
-.header-profile-image {
-  border-radius: 50%;
-  height: 28px;
-  margin-right: 5px;
-  opacity: 0.8;
-  width: 28px;
+
+.btn-success {
+  margin-left: 10px;
 }
-.open .header-profile-image,
-a:hover .header-profile-image {
-  opacity: 1;
+
+.form-inline {
+
+  text-align: center;
+  margin-top: 8px;
 }
-.user-header-dropdown-toggle {
-  padding-bottom: 11px !important;
-  padding-top: 11px !important;
-}
-.user-primary-account {
-  font-size: 30px;
-  position: absolute;
-  right: 10px;
-  top: 10px;
-}
-.error-text {
-  display: none;
-}
-.has-error .help-block.error-text {
-  display: block;
-}
-.has-error .help-inline.error-text {
-  display: inline;
+
+.map {
+  width: 100%;
 }
